cloudtower-api-doc/markdown/zh/v1.9.0/schemas/ContentLibraryVmTemplateWhereInput.md
| parameter | Type | Description |
| ----------- | ----------- |----------- |
| AND  |  object  |    |
| AND  |  array  |    |
| architecture  |  object  |    |
| architecture_in  |  object  |    |
| architecture_in  |  array  |    |
| architecture_not  |  object  |    |
| architecture_not_in  |  object  |    |
| architecture_not_in  |  array  |    |
| cloud_init_supported  |  boolean  |    |
| cloud_init_supported_not  |  boolean  |    |
| clusters_every  |  object  |    |
| clusters_none  |  object  |    |
| clusters_some  |  object  |    |
| createdAt  |  string  |    |
| createdAt_gt  |  string  |    |
| createdAt_gte  |  string  |    |
| createdAt_in  |  string  |    |
| createdAt_in  |  array  |    |
| createdAt_lt  |  string  |    |
| createdAt_lte  |  string  |    |
| createdAt_not  |  string  |    |
| createdAt_not_in  |  string  |    |
| createdAt_not_in  |  array  |    |
| description  |  string  |    |
| description_contains  |  string  |    |
| description_ends_with  |  string  |    |
| description_gt  |  string  |    |
| description_gte  |  string  |    |
| description_in  |  string  |    |
| description_in  |  array  |    |
| description_lt  |  string  |    |
| description_lte  |  string  |    |
| description_not  |  string  |    |
| description_not_contains  |  string  |    |
| description_not_ends_with  |  string  |    |
| description_not_in  |  string  |    |
| description_not_in  |  array  |    |
| description_not_starts_with  |  string  |    |
| description_starts_with  |  string  |    |
| entityAsyncStatus  |  object  |    |
| entityAsyncStatus_in  |  object  |    |
| entityAsyncStatus_in  |  array  |    |
| entityAsyncStatus_not  |  object  |    |
| entityAsyncStatus_not_in  |  object  |    |
| entityAsyncStatus_not_in  |  array  |    |
| id  |  string  |    |
| id_contains  |  string  |    |
| id_ends_with  |  string  |    |
| id_gt  |  string  |    |
| id_gte  |  string  |    |
| id_in  |  string  |    |
| id_in  |  array  |    |
| id_lt  |  string  |    |
| id_lte  |  string  |    |
| id_not  |  string  |    |
| id_not_contains  |  string  |    |
| id_not_ends_with  |  string  |    |
| id_not_in  |  string  |    |
| id_not_in  |  array  |    |
| id_not_starts_with  |  string  |    |
| id_starts_with  |  string  |    |
| labels_every  |  object  |    |
| labels_none  |  object  |    |
| labels_some  |  object  |    |
| memory  |  number  |    |
| memory_gt  |  number  |    |
| memory_gte  |  number  |    |
| memory_in  |  number  |    |
| memory_in  |  array  |    |
| memory_lt  |  number  |    |
| memory_lte  |  number  |    |
| memory_not  |  number  |    |
| memory_not_in  |  number  |    |
| memory_not_in  |  array  |    |
| name  |  string  |    |
| name_contains  |  string  |    |
| name_ends_with  |  string  |    |
| name_gt  |  string  |    |
| name_gte  |  string  |    |
| name_in  |  string  |    |
| name_in  |  array  |    |
| name_lt  |  string  |    |
| name_lte  |  string  |    |
| name_not  |  string  |    |
| name_not_contains  |  string  |    |
| name_not_ends_with  |  string  |    |
| name_not_in  |  string  |    |
| name_not_in  |  array  |    |
| name_not_starts_with  |  string  |    |
| name_starts_with  |  string  |    |
| NOT  |  object  |    |
| NOT  |  array  |    |
| OR  |  object  |    |
| OR  |  array  |    |
| os  |  string  |    |
| os_contains  |  string  |    |
| os_ends_with  |  string  |    |
| os_gt  |  string  |    |
| os_gte  |  string  |    |
| os_in  |  string  |    |
| os_in  |  array  |    |
| os_lt  |  string  |    |
| os_lte  |  string  |    |
| os_not  |  string  |    |
| os_not_contains  |  string  |    |
| os_not_ends_with  |  string  |    |
| os_not_in  |  string  |    |
| os_not_in  |  array  |    |
| os_not_starts_with  |  string  |    |
| os_starts_with  |  string  |    |
| size  |  number  |    |
| size_gt  |  number  |    |
| size_gte  |  number  |    |
| size_in  |  number  |    |
| size_in  |  array  |    |
| size_lt  |  number  |    |
| size_lte  |  number  |    |
| size_not  |  number  |    |
| size_not_in  |  number  |    |
| size_not_in  |  array  |    |
| vcpu  |  integer  |    |
| vcpu_gt  |  integer  |    |
| vcpu_gte  |  integer  |    |
| vcpu_in  |  integer  |    |
| vcpu_in  |  array  |    |
| vcpu_lt  |  integer  |    |
| vcpu_lte  |  integer  |    |
| vcpu_not  |  integer  |    |
| vcpu_not_in  |  integer  |    |
| vcpu_not_in  |  array  |    |
| vm_templates_every  |  object  |    |
| vm_templates_none  |  object  |    |
| vm_templates_some  |  object  |    |